- Fixed bug #47667 (ZipArchive::OVERWRITE seems to have no effect).
  (Mikko, Pierre)
- Fixed bug #47644 (Valid integers are truncated with json_decode()). (Scott)
- Fixed bug #47639 (pg_copy_from() WARNING: nonstandard use of \\ in a string
  literal). (Ilia)
- Fixed bug #47616 (curl keeps crashing). (Felipe)
- Fixed bug #47598 (FILTER_VALIDATE_EMAIL is locale aware). (Ilia)
- Fixed bug #47564 (unpacking unsigned long 32bit bit endian returns wrong
  result). (Ilia)
- Fixed bug #47487 (performance degraded when reading large chunks after fix of
  bug #44607). (Arnaud)
- Fixed bug #47468 (enable cli|cgi-only extensions for embed sapi). (Jani)
- Fixed bug #47365 (ip2long() may allow some invalid values on certain 64bit  
  systems). (Ilia)
- Fixed bug #47435 (FILTER_FLAG_NO_PRIV_RANGE does not work with ipv6
  addresses in the filter extension). (Ilia)
- Fixed bug #47430 (Errors after writing to nodeValue parameter of an absent 
  previousSibling). (Rob)
- Fixed bug #47254 (Wrong Reflection for extends class). (Felipe)
- Fixed bug #46882 (Serialize / Unserialize misbehaviour under OS with
  different bit numbers). (Matt)
- Fixed bug #46812 (get_class_vars() does not include visible private variable
  looking at subclass). (Arnaud)
- Fixed bug #45997 (safe_mode bypass with exec/system/passthru (windows only)).
  (Pierre)
- Fixed bug #45877 (Array key '2147483647' left as string). (Matt)
- Fixed bug #45822 (Near infinite-loops while parsing huge relative offsets).
  (Derick, Mike Sullivan)
- Fixed bug #45799 (imagepng() crashes on empty image). (Martin McNickle,
  Takeshi Abe)
- Fixed bug #45622 (isset($arrayObject->p) misbehaves with ArrayObject::
  ARRAY_AS_PROPS set). (robin_fernandes at uk dot ibm dot com, Arnaud)
- Fixed bug #45614 (ArrayIterator::current(), ::key() can show 1st private
  prop of wrapped object). (robin_fernandes at uk dot ibm dot com, Arnaud)
- Fixed bug #45540 (stream_context_create creates bad http request). (Arnaud)